[gd_scene load_steps=22 format=2]

[ext_resource path="res://fonts/orbitron-black.otf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/NotoSansJP-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://rythm_game/game_modes/heartbeat/HeartbeatRhythmGameEmbeddedUI.gd" type="Script" id=3]
[ext_resource path="res://fonts/NotoSansJP-Black.otf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Rating_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/Default_Font_smoler.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/orbitron-black-mono.otf" type="DynamicFontData" id=13]
[ext_resource path="res://styles/PanelStyleTransparent.tres" type="StyleBox" id=15]
[ext_resource path="res://rythm_game/HoldIndicator.gd" type="Script" id=16]
[ext_resource path="res://sounds/sfx/slide_hold_start.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/sfx/slide_note.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/sfx/tmb3.wav" type="AudioStream" id=23]
[ext_resource path="res://rythm_game/rating_label.gd" type="Script" id=26]
[ext_resource path="res://sounds/sfx/slide_hold_fail.wav" type="AudioStream" id=27]
[ext_resource path="res://sounds/sfx/slide_hold_ok.wav" type="AudioStream" id=29]
[ext_resource path="res://rythm_game/SlideHoldScoreText.tscn" type="PackedScene" id=31]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0.964706, 0.756863, 0.203922, 1 )
use_filter = true
extra_spacing_top = 7
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_mipmaps = true
use_filter = true
extra_spacing_top = 7
extra_spacing_char = 2
font_data = ExtResource( 13 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0.490196, 0.219608, 0.505882, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 7
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color( 0.188235, 0.0745098, 0.301961, 0.501961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.94902, 0.772549, 0.239216, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.25 )
shadow_size = 10

[sub_resource type="Animation" id=5]
length = 0.1
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.048, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.8, 0.8 ), Vector2( 0.75, 0.75 ) ]
}

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 67.9876 ],
"_edit_use_anchors_": false
}

[node name="AboveNotesUI" type="Node2D" parent="."]

[node name="Control" type="Control" parent="AboveNotesUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideHoldScoreText" parent="AboveNotesUI/Control" instance=ExtResource( 31 )]
margin_left = 202.697
margin_top = 329.212
margin_right = 591.697
margin_bottom = 369.212

[node name="UnderNotesUI" type="Node2D" parent="."]
z_index = -2

[node name="Control" type="Control" parent="UnderNotesUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.950073
margin_right = 1920.95
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldIndicator" type="VBoxContainer" parent="UnderNotesUI/Control"]
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.85
margin_bottom = 8.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UnderNotesUI/Control/HoldIndicator"]
margin_right = 959.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
custom_styles/panel = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UnderNotesUI/Control/HoldIndicator/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 11
custom_constants/margin_left = 43
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UnderNotesUI/Control/HoldIndicator/Panel/MarginContainer"]
margin_left = 43.0
margin_right = 948.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusLabel" type="Label" parent="UnderNotesUI/Control/HoldIndicator/Panel/MarginContainer/HBoxContainer"]
margin_right = 298.0
margin_bottom = 35.0
rect_min_size = Vector2( 298, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "QUADRUPLE BONUS"
valign = 1

[node name="HoldNoteIcons" type="HBoxContainer" parent="UnderNotesUI/Control/HoldIndicator/Panel/MarginContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 302.0
margin_bottom = 35.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UnderNotesUI/Control/HoldIndicator/Panel/MarginContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 905.0
margin_bottom = 35.0
size_flags_horizontal = 3
alignment = 2

[node name="ScoreLabel" type="Label" parent="UnderNotesUI/Control/HoldIndicator/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 599.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "+1000"
align = 2
valign = 1

[node name="HoldCount" type="Label" parent="UnderNotesUI/Control/HoldIndicator/Panel"]
margin_left = -33.0
margin_top = -26.0
margin_right = 51.0
margin_bottom = 64.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxComboContainer" type="Control" parent="UnderNotesUI/Control/HoldIndicator"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 39.0
margin_right = 959.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 30 )

[node name="Control" type="Panel" parent="UnderNotesUI/Control/HoldIndicator/MaxComboContainer"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UnderNotesUI/Control/HoldIndicator/MaxComboContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UnderNotesUI/Control/HoldIndicator/MaxComboContainer/Control/MarginContainer"]
margin_left = 5.0
margin_right = 479.0
margin_bottom = 30.0

[node name="MaxComboLabel" type="Label" parent="UnderNotesUI/Control/HoldIndicator/MaxComboContainer/Control/MarginContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 474.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "(NT)Max Hold Bonus! +3300"
align = 1

[node name="Lyrics" type="Node2D" parent="."]
z_index = -2

[node name="Control" type="Control" parent="Lyrics"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.950073
margin_right = 1920.95
margin_bottom = 1080.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLayer" type="Node2D" parent="."]
show_behind_parent = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="AudioStreamPlayerVocals" type="AudioStreamPlayer" parent="."]
bus = "Vocals"

[node name="HitEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "SFX"

[node name="HitEffectSlide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "SlideSFX"
__meta__ = {
"_editor_description_": ""
}

[node name="SlideChainLoopSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 4.0
bus = "SlideSFX"
__meta__ = {
"_editor_description_": ""
}

[node name="SlideChainSuccessSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = 4.0
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}

[node name="SlideChainFailSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = 4.0
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}

[node name="RatingLabel" type="Label" parent="."]
margin_left = 43.0
margin_top = 66.0
margin_right = 712.0
margin_bottom = 344.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 334, 139 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.5 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "WORST"
align = 1
valign = 1
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="RatingLabel"]
anims/rating_appear = SubResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.735077
margin_bottom = -0.735107
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.005
anchor_right = 1.0
anchor_bottom = 0.066
margin_left = -0.4
margin_top = 1.0
margin_bottom = 81.48
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer"]
margin_right = 1910.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment = 2

[node name="Prompts" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.99561
margin_top = 1.58344
margin_right = 1.99561
margin_bottom = 1.58344
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
